# Jarvis-Version

./: .gitignore  CMakeLists.txt  README.md  WARP.md  WEB_SETUP.md  build_cpp.bat  index.html  index_from_commit.html  package.json  server.cpp  server.js  server_backup_nodejs.js
jarvis-react/: index.html
jarvis-react/src/: App.css  App.jsx  index.css
jarvis-react/src/components/: Header.css  Header.jsx
jarvis-react/src/pages/: Chat.css  Chat.jsx  LandingPage.css  LandingPage.jsx
src/: chanakya.cpp
